--- a/eventos_Formulário.html
+++ b/eventos_Formulário.html
@@ -11,18 +11,19 @@
 </head>
 <body>
     <!-- onfus:  o evento acontece quando recebe atenção do cursor do mouse -->
-    <!-- <input onfocus="console.log('teste')" type="text"> -->
+
+     <input onfocus="console.log('teste')" type="text">
 
       <!-- onblur:  o evento acontece quando perde o foco ou seja clica fora do evento  -->
-   <!--  <input onblur="console.log('perdendo o foco ')" type="text"> -->
 
    <!--  <input onblur="console.log('perdendo o foco ')" type="text"> -->
 
-    <select onchange="console.log ('estado foi modificao')" >
+
+   <!--  <select onchange="console.log ('estado foi modificao')" >
 
     <option>-- Selecione -- </option>
 <option value="1"> primera opção </option>
 <option value="2"> segunda opção </option>    
-</select>
+</select> -->
 </body>
 </html>
