--- a/array.html
+++ b/array.html
@@ -59,5 +59,11 @@
     
     Vamos pra proxima aula :)
 
+
+    <script>
+        var lista_frutas = Array()
+        
+    </script>
+
 </body>
 </html>
