--- a/arrayMudimensional.html
+++ b/arrayMudimensional.html
@@ -9,6 +9,11 @@
 <body>
     <!-- arrays de arrays bi-dimensional -->
     <script>
+        var lista =  Array()
+
+        Lista_coisas ['frutas'] [1] =  Array()
+        lista_coisas ['frutas'] [2]
+
 
     </script>
 </body>
