--- a/obejtct.html
+++ b/obejtct.html
@@ -18,7 +18,7 @@
         },
       });
 
-      // posso ter funlçoes dentro do objeto ou seja meu dados não estão perdidos
+      // posso ter funçoes dentro do objeto ou seja meu dados não estão perdidos
     </script>
   </body>
 </html>
