--- a/Index.html
+++ b/Index.html
@@ -28,26 +28,12 @@
       </style>
 </head>
 <body>
-    <h1>Number guessing game</h1>
-
-    <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.</p>
-
-    <div class="form">
-      <label for="guessField">Enter a guess: </label>
-      <input type="number" min="1" max="100" required id="guessField" class="guessField">
-      <input type="submit" value="Submit guess" class="guessSubmit">
-    </div>
-
-    <div class="resultParas">
-      <p class="guesses"></p>
-      <p class="lastResult"></p>
-      <p class="lowOrHi"></p>
-    </div>
+   
   
-<script src="arrowFunction.js"></script>
-<script src="calback.js"></script>
-<script src="Funções-construtoras.js"></script>
-<script src="teste.js"></script>
+ <!-- <script src="arrowFunction.js"></script>
+<script src="calback.js"></script> -->
+<script src="Funções-construtoras.js"></script> 
+
 
 </body>
 </html>
