Lista de ListaDeTarefas

--- a/Estdudos_js_Sujeito_Programador/index.html
+++ b/Estdudos_js_Sujeito_Programador/index.html
@@ -9,5 +9,6 @@
 <body>
     <script src="temporizador.js"></script>
     <script src="Objetos.js"></script>
+    <script src="VáriaveisString.js"></script>
 </body>
 </html>
