--- a/Estdudos_js_Sujeito_Programador/index.html
+++ b/Estdudos_js_Sujeito_Programador/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <script src="temporizador.js"></script>
+  </head>
+  <body>
+    <!-- <script src="temporizador.js"></script>
     <script src="Objetos.js"></script>
-    <script src="VáriaveisString.js"></script>
-</body>
+    <script src="VáriaveisString.js"></script> 
+    <script src="spredOperation.js"></script> 
+    <script src="RESTOperation.js"></script> 
+    <script src="OperaçõesEmArray.js"></script> -->
+    <script src="functionAnonima.js"></script> 
+
+    <h1></h1>
+  </body>
 </html>
