Realizado a atividade de requisiçoes de http - api

--- a/Estdudos_js_Sujeito_Programador/index.html
+++ b/Estdudos_js_Sujeito_Programador/index.html
@@ -5,16 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <ul id="app">
+      
+    </ul>
     <!-- <script src="temporizador.js"></script>
     <script src="Objetos.js"></script>
     <script src="VáriaveisString.js"></script> 
     <script src="spredOperation.js"></script> 
     <script src="RESTOperation.js"></script> 
-    <script src="OperaçõesEmArray.js"></script> -->
-    <script src="functionAnonima.js"></script> 
+    <script src="OperaçõesEmArray.js"></script> 
+    <script src="functionAnonima.js"></script> -->
+    <script src="requisicoesHttp.js"></script>
 
-    <h1></h1>
+    
+
   </body>
 </html>
